Add scroll for countries list

--- a/stylesheets/options.css
+++ b/stylesheets/options.css
@@ -37,6 +37,7 @@
   position: absolute;
   background-color: #f6f6f6;
   min-width: 230px;
+  max-height: 600px;
   overflow: auto;
   border: 1px solid #ddd;
   z-index: 1;
